--- a/addpost.html
+++ b/addpost.html
@@ -13,12 +13,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Slick slider css  -->
     <link rel="stylesheet" href="assets/css/slick.css">
-    <!-- Slick slider theme css  -->
-    <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <!-- Slick slider css  -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"> -->
     <!-- fontawesome kit  -->
     <script src="assets/js/kit-fontawesome.js"></script>
+    <!-- Bootstrap select css -->
+    <link rel="stylesheet" href="assets/bootstrap/select.min.css">
 </head>
 
 <body>
@@ -267,75 +265,225 @@
             <div class="container">
                 <div class="addpost_features py-4 px-3">
                     <div class="row align-items-center">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="product_wrapper">
                                 <h6>Product Name</h6>
                             </div>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-8">
                             <div class="product_feature">
-                                <input class="form-control shadow-none border-0" type="text" placeholder="Type here"
-                                    aria-label="default input example">
+                                <input class="form-control shadow-none border-0 ps-0" type="text"
+                                    placeholder="Type here" aria-label="default input example">
                             </div>
                         </div>
-                        <hr>
-                        <div class="col-md-3">
+                        <div class="divide_line"></div>
+                        <div class="col-md-4">
                             <div class="product_wrapper">
                                 <h6>Product Description</h6>
                             </div>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-8">
                             <div class="product_feature">
-                                <textarea class="form-control shadow-none border-0" id="exampleFormControlTextarea1"
-                                    rows="1" placeholder="Type here"></textarea>
+                                <textarea class="form-control shadow-none border-0 ps-0"
+                                    id="exampleFormControlTextarea1" rows="1" placeholder="Type here"></textarea>
                             </div>
                         </div>
-                        <hr>
-                        <div class="col-md-3">
+                        <div class="divide_line "></div>
+                        <div class="col-md-4">
                             <div class="product_wrapper">
                                 <h6>Product Additional Information</h6>
                             </div>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-8">
                             <div class="product_feature">
-                                <textarea class="form-control shadow-none border-0" id="exampleFormControlTextarea2"
-                                    rows="1" placeholder="Type here"></textarea>
+                                <textarea class="form-control shadow-none border-0 ps-0"
+                                    id="exampleFormControlTextarea2" rows="1" placeholder="Type here"></textarea>
                             </div>
                         </div>
-                        <hr>
-                        <div class="col-md-3">
+                        <div class="divide_line"></div>
+                        <div class="col-md-4">
                             <div class="product_wrapper">
                                 <h6>Product Brand</h6>
                             </div>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-8">
                             <div class="product_feature">
-                                <select class="form-control shadow-none border-0 choices-multiple">
-                                    <div class="col-12">
-                                        <div class="row">
-                                            <div class="col-3">
-                                                <option></option>
-                                                <option value="AZ">Arizona</option>
-                                                <option value="CO">Colorado</option>
-                                                <option value="ID">Idaho</option>
-                                                <option value="MT">Montana</option>
-                                                <option value="NE">Nebraska</option>
-                                                <option value="NM">New Mexico</option>
-                                                <option value="ND">North Dakota</option>
-                                                <option value="UT">Utah</option>
-                                                <option value="WY">Wyoming</option>
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle" data-bs-toggle="dropdown"
+                                        data-bs-auto-close="outside">Type here</a>
+                                    <div class="dropdown-menu border-0">
+                                        <div class="container">
+                                            <div class="select_search">
+                                                <input type="search" class="form-control shadow-none" id="selctsearch"
+                                                    placeholder="Type here">
+                                            </div>
+                                            <div class="row g-3">
+                                                <div class="col-lg-3 col-sm-6 py-4">
+                                                    <!-- <div class=""> -->
+                                                    <a class="dropdown-item" href="#">Accomodations</a>
+                                                    <a class="dropdown-item" href="#">Terms & Conditions</a>
+                                                    <a class="dropdown-item" href="#">Privacy</a>
+                                                    <a class="dropdown-item" href="#">Lorum</a>
+                                                    <a class="dropdown-item" href="#">Lorum</a>
+                                                    <!-- </div> -->
+                                                </div>
+                                                <div class="col-lg-3 col-sm-6 py-4">
+                                                    <div>
+                                                        <a class="dropdown-item" href="#">Accomodations</a>
+                                                        <a class="dropdown-item" href="#">Terms & Conditions</a>
+                                                        <a class="dropdown-item" href="#">Privacy</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 col-sm-6 py-4">
+                                                    <div>
+                                                        <a class="dropdown-item" href="#">Accomodations</a>
+                                                        <a class="dropdown-item" href="#">Terms & Conditions</a>
+                                                        <a class="dropdown-item" href="#">Privacy</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3 col-sm-6 py-4">
+                                                    <div>
+                                                        <a class="dropdown-item" href="#">Accomodations</a>
+                                                        <a class="dropdown-item" href="#">Terms & Conditions</a>
+                                                        <a class="dropdown-item" href="#">Privacy</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                        <a class="dropdown-item" href="#">Lorum</a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </select>
-
-                                <script>
-                                    new Choices(document.querySelector(".choices-single"));
-                                </script>
-
+                                </div>
                             </div>
                         </div>
-                        <hr>
+                    </div>
+                </div>
+                <div class="divide_line pt-4"></div>
+            </div>
+            <div class="container pt-4">
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-8">
+                        <div class="custom_control d-flex justify-content-start gap-5">
+                            <div class="custom_checks p-1 px-2 rounded d-inline-flex">
+                                <input type="checkbox" class="form-check-input shadow-none" id="flexCheckAuction">
+                                <label class="form-check-label ps-2" for="flexCheckAuction">Auction</label>
+                            </div>
+                            <div class="custom_checks p-1 px-2 rounded d-inline-flex" style="margin-left: 35px;">
+                                <input type="checkbox" class="form-check-input shadow-none" id="customCheckNonAuction">
+                                <label class="form-check-label ps-2" for="customCheckNonAuction">Non-Auction</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="addpost_features p-3 my-3">
+                    <div class="row align-items-center">
+                        <div class="col-md-4">
+                            <div class="product_wrapper">
+                                <p class="mb-0 fw-lighter">Starting Bid</p>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="product_feature">
+                                <input class="form-control shadow-none border-0 ps-0" type="text"
+                                    placeholder="Type here" aria-label="default input example">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="divide_line pt-4"></div>
+            </div>
+            <div class="container">
+                <div class="p-3 my-2">
+                    <div class="row align-items-center">
+                        <div class="col-md-4">
+                            <div class="product_wrapper">
+                                <p class="mb-0 fw-lighter">Gender</p>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="custom_control gap-5 d-flex justify-content-start">
+                                <div class="custom_checks p-1 rounded">
+                                    <input type="checkbox" class="form-check-input shadow-none" id="flexCheckMen">
+                                    <label class="form-check-label ps-2" for="flexCheckMen">Men</label>
+                                </div>
+                                <div class="custom_checks p-1 rounded" style="margin-left: 57px;">
+                                    <input type="checkbox" class="form-check-input shadow-none" id="customCheckWomen">
+                                    <label class="form-check-label ps-2" for="customCheckWomen">Women</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 pt-3">
+                            <div class="product_wrapper">
+                                <p class="mb-0 fw-lighter">Category</p>
+                            </div>
+                        </div>
+                        <div class="col-md-8 pt-3">
+                            <div class="custom_control d-flex justify-content-between">
+                                <div class="custom_checks p-1 rounded d-inline-flex">
+                                    <input type="checkbox" class="form-check-input shadow-none" id="customCheckBags">
+                                    <label class="form-check-label ps-2 w-100" for="customCheckBags">Bags</label>
+                                </div>
+                                <div class="custom_checks p-1 rounded d-inline-flex">
+                                    <input type="checkbox" class="form-check-input shadow-none" id="customCheckPens">
+                                    <label class="form-check-label ps-2  px-4 w-100 text-center"
+                                        for="customCheckPens">Pens</label>
+                                </div>
+                                <div class="custom_checks p-1 rounded d-inline-flex">
+                                    <input type="checkbox" class="form-check-input shadow-none" id="customCheckWatches">
+                                    <label class="form-check-label ps-2 w-100" for="customCheckWatches">Watches</label>
+                                </div>
+                                <div class="custom_checks p-1 rounded d-inline-flex">
+                                    <input type="checkbox" class="form-check-input shadow-none"
+                                        id="customCheckAccessories">
+                                    <label class="form-check-label ps-2 w-100"
+                                        for="customCheckAccessories">Accessories</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="divide_line"></div>
+            </div>
+            <div class="container pt-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="d-grid">
+                            <style>
+
+                            </style>
+                            <div class="file btn fw-lighter">
+                                Upload Image(s)
+                                <input type="file" name="file" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="justify-content-between align-items-center d-flex">
+                            <div class="d-flex align-items-start">
+                                <div class="policieschecks mt-1">
+                                    <input type="checkbox" class="form-check-input shadow-none mt-0 me-2"
+                                        id="emailupdates">
+                                </div>
+                                <div class="flex-column d-flex">
+                                    <p>I have read and agree to the <a href="#" target="_blank"
+                                            rel="noopener noreferrer">Privacy Policy</a> &
+                                        jeddahmazad.com <a href="#" target="_blank" rel="noopener noreferrer">Terms
+                                            &
+                                            Conditions</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="d-grid done_btn">
+                            <button class="btn fw-bolder" type="button">Done</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -405,14 +553,14 @@
             <p>© 2023 <a href="#"><b>Jeddah Mazad.</b></a> All Rights Reserved</p>
         </div>
     </section>
+
     <!-- =============================Footer End==============================-->
-    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
-    <!-- Slick slider js  -->
-    <script type="text/javascript" src="assets/js/slick.min.js"></script>
+    <!-- jQuery link  -->
+    <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap select js -->
+    <link rel="stylesheet" href="assets/bootstrap/select.min.js">
     <!-- Custom JS -->
     <script src="assets/js/main.js"></script>
 </body>
