--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <!-- Slick slider theme css  -->
     <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <!-- Slick slider css  -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"> -->
     <!-- fontawesome kit  -->
     <script src="assets/js/kit-fontawesome.js"></script>
 </head>
@@ -699,32 +697,32 @@
                 <div class="col-md-2 col-12">
                     <div class="custom_control">
                         <div class="custom_checks p-1 rounded mb-3 d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="flexCheckDefault">
-                            <label class="form-check-label ps-2 w-100" for="flexCheckDefault">Men</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="flexCheckMen">
+                            <label class="form-check-label ps-2 w-100" for="flexCheckMen">Men</label>
                         </div>
                         <div class="custom_checks p-1 rounded d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox1">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBox1">Women</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckWomen">
+                            <label class="form-check-label ps-2 w-100" for="customCheckWomen">Women</label>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-2 col-12">
                     <div class="custom_control">
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox2">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBox2">Bags</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBags">
+                            <label class="form-check-label ps-2 w-100" for="customCheckBags">Bags</label>
                         </div>
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox3">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBox3">Pens</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckPens">
+                            <label class="form-check-label ps-2 w-100" for="customCheckPens">Pens</label>
                         </div>
                         <div class="custom_checks p-1 rounded  mb-3 d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox4">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBox4">Watches</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckWatches">
+                            <label class="form-check-label ps-2 w-100" for="customCheckWatches">Watches</label>
                         </div>
                         <div class="custom_checks p-1 rounded d-inline-flex w-100">
-                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox5">
-                            <label class="form-check-label ps-2 w-100" for="customCheckBox5">Accessories</label>
+                            <input type="checkbox" class="form-check-input shadow-none" id="customCheckAccessories">
+                            <label class="form-check-label ps-2 w-100" for="customCheckAccessories">Accessories</label>
                         </div>
                     </div>
                 </div>
@@ -844,9 +842,8 @@
 
 
     <!-- =============================Footer End==============================-->
-    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <!-- jQuery link  -->
+    <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <!-- Slick slider js  -->
     <script type="text/javascript" src="assets/js/slick.min.js"></script>
     <!-- Bootstrap JS -->
