--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,6 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- /////////// -->
                     <div class="container-fluid">
                         <div class="offcanvas offcanvas-start w-100" tabindex="-1" id="offcanvas"
                             data-bs-keyboard="false" data-bs-backdrop="false">
@@ -83,7 +82,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /////////// -->
                 </div>
                 <button
                     class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around align-self-center me-lg-0 me-2"
@@ -320,8 +318,8 @@
             <p>© 2023 <a href="#"><b>Jeddah Mazad.</b></a> All Rights Reserved</p>
         </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
+    <!-- jQuery link  -->
+    <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
