--- a/filtersearch.html
+++ b/filtersearch.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <!-- Slick slider theme css  -->
     <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <!-- Slick slider css  -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"> -->
     <!-- fontawesome kit  -->
     <script src="assets/js/kit-fontawesome.js"></script>
 </head>
@@ -269,12 +267,12 @@
             <div class="container">
                 <div class="search_check d-flex gap-3 pt-5 pb-3">
                     <div class="custom_checks p-1 rounded d-inline-flex">
-                        <input type="checkbox" class="form-check-input shadow-none" id="flexCheckDefault">
-                        <label class="form-check-label ps-2 w-100" for="flexCheckDefault">Men</label>
+                        <input type="checkbox" class="form-check-input shadow-none" id="flexCheckMen">
+                        <label class="form-check-label ps-2 w-100" for="flexCheckMen">Men</label>
                     </div>
                     <div class="custom_checks p-1 rounded d-inline-flex">
-                        <input type="checkbox" class="form-check-input shadow-none" id="customCheckBox1">
-                        <label class="form-check-label ps-2 w-100" for="customCheckBox1">Women</label>
+                        <input type="checkbox" class="form-check-input shadow-none" id="customCheckWomen">
+                        <label class="form-check-label ps-2 w-100" for="customCheckWomen">Women</label>
                     </div>
                 </div>
                 <div class="row g-0 gy-3">
@@ -741,9 +739,8 @@
         </div>
     </section>
     <!-- =============================Footer End==============================-->
-    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <!-- jQuery link  -->
+    <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <!-- Slick slider js  -->
     <script type="text/javascript" src="assets/js/slick.min.js"></script>
     <!-- Bootstrap JS -->
