--- a/login.html
+++ b/login.html
@@ -256,8 +256,8 @@
             <p>© 2023 <a href="#"><b>Jeddah Mazad.</b></a> All Rights Reserved</p>
         </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
+    <!-- jQuery link  -->
+    <script type="text/javascript" src="assets/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
